<resources>
    <string name="app_name">BlueChart_10</string>

    //Login頁面
    <string name="login_device_name_title">device name</string>
    <string name="login_log_in">GO</string>
    <string name="login_bluetooth_hint">This app will enable your bluetooth</string>

    //Search頁面
    <string name="search_title">People around Me</string>
    <string name="search_status_not_connected">not connected</string>
    <string name="search_status_connecting">connecting</string>
    <string name="search_status_connected">connected</string>
    <string name="search_btn_search_devices">Search Devices</string>
    <string name="search_btn_make_visible">Make Visible</string>
    <string name="search_paired_devices">Paired Devices</string>
    <string name="search_searched_devices">Searched Devices</string>
    <string name="search_no_devices">no devices</string>
    <string name="search_searching_devices">searching devices…</string>

    //Chat頁面
    <string name="chat_title">chatting with </string>

    //Search頁面 - bluetooth connect status
    <string name="bluetooth_status_disconnected">disconnected</string>
    <string name="bluetooth_status_connected">connected</string>

    //Dialog相關字串
    <string name="dialog_title">hint</string>
    <string name="dialog_bluetooth_hint">This app needs to enable bluetooth</string>
    <string name="dialog_btn_yes">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>

</resources>